lang/macro/tests/ui/fail/37-invalid-item-in-interface.rs
use liquid_lang as liquid;

#[liquid::interface(name = auto)]
mod foo {
    extern "liquid" {
        fn bar(&self);
    }

    pub fn baz() {}
}

fn main() {}
